--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -20,7 +20,8 @@
   margin: 0% auto; }
 
 ul {
-  list-style-type: none; }
+  list-style-type: none;
+  margin-bottom: 0rem; }
 
 .h1 {
   color: bisque;
@@ -42,8 +43,11 @@ ul {
   color: bisque; }
 
 .color {
-  background-color: rgba(51, 88, 70, 0.747);
+  background-color: rgba(21, 65, 49, 0.548);
   justify-content: center; }
+
+.sombraP {
+  text-shadow: 1px 1px 2px black; }
 
 .sinPadding {
   padding: 0%; }
@@ -63,6 +67,9 @@ ul {
 
 .margintop {
   margin-top: 2rem; }
+
+.margintopgrande {
+  margin-top: -9rem; }
 
 .marginT {
   margin-top: 1rem; }
@@ -85,16 +92,24 @@ ul {
 
 .subtituloCentrado {
   color: #0c4724;
-  font-weight: bolder;
+  text-shadow: 1px 1px 3px bisque;
+  font-weight: 900;
   text-align: center;
   text-decoration: underline;
-  font-size: 220%;
+  font-size: 270%;
   font-family: 'Oooh Baby'; }
 
 strong {
   text-decoration: underline;
   font-style: oblique;
   font-weight: 900; }
+
+.maxwidth {
+  max-width: 100%; }
+
+.sinNegrita {
+  text-decoration: none;
+  font-size: 200%; }
 
 .header {
   box-shadow: 5px 8px 11px;
@@ -148,13 +163,13 @@ strong {
 .oculto {
   display: none; }
 
-ul {
-  margin-bottom: 0rem; }
-
+/*INDEX*/
 #bannerinicio {
-  width: 95vw;
-  height: 45vw;
+  width: 100%;
+  height: 80%;
   padding-top: 0.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   border-radius: 15%;
   margin-bottom: 1rem; }
 
@@ -170,20 +185,22 @@ ul {
 .caja3index {
   margin: 0 auto;
   margin-bottom: 1rem;
-  border: solid 3px rgba(21, 65, 49, 0.548);
-  padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 100%;
-  grid-column-gap: 1rem; }
+  grid-column-gap: 1.5rem; }
   .caja3index__img {
     width: 100%;
     height: 25rem;
     overflow: hidden;
     object-fit: cover; }
 
+.img-thumbnail {
+  background-color: #0c4724;
+  border-radius: 0%; }
+
 .iframeIndexContenedor {
-  height: 30rem;
+  height: 32rem;
   margin: 0% auto; }
 
 .iframeIndex {
@@ -191,19 +208,36 @@ ul {
   width: 100%; }
 
 /* Segunda página - Nosotros*/
-.cajaNosotros {
-  width: 98%;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column; }
+.tarjetaStaff {
+  background-color: rgba(21, 65, 49, 0.548);
+  padding: 1rem;
+  height: 100%; }
+  .tarjetaStaff__img {
+    margin-bottom: 0.5rem; }
+  .tarjetaStaff__h2 {
+    text-decoration: none; }
+  .tarjetaStaff__p {
+    font-weight: bolder;
+    color: bisque; }
+
+.parrafoCajaNosotros {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 110%;
+  line-height: 2;
+  text-align: center;
+  color: bisque;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0.4rem;
+  font-weight: bold;
+  margin-bottom: 0rem; }
 
 .nosotros__img {
   width: 100%;
   object-fit: cover; }
 
 .caja__imgOrigen {
-  margin-top: 2rem;
+  margin-top: 3.5rem;
   margin-right: 1.5rem;
   width: 400px;
   height: 340px;
@@ -216,7 +250,7 @@ ul {
 .caja__imgPlanes {
   width: 410px;
   height: 350px;
-  margin-top: 2rem;
+  margin-top: 3.8rem;
   margin-left: -4rem;
   margin-bottom: 2rem;
   overflow: hidden; }
@@ -228,36 +262,13 @@ ul {
 .caja__imgRecomendaciones {
   width: 490px;
   height: 320px;
-  margin-top: 3rem; }
+  margin-top: 4.5rem; }
 
 .imgRecomendaciones {
   width: 100%; }
 
-.parrafoCajaNosotros {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 100%;
-  line-height: 2;
-  text-align: center;
-  color: bisque;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: 0.4rem;
-  font-weight: bold;
-  margin-bottom: 0rem; }
-
 .tamañoLetra {
   margin-left: 2rem; }
-
-.tarjetaStaff {
-  background-color: rgba(21, 65, 49, 0.548);
-  padding: 1rem; }
-  .tarjetaStaff__img {
-    margin-bottom: 0.5rem; }
-  .tarjetaStaff__h2 {
-    text-decoration: none; }
-  .tarjetaStaff__p {
-    font-weight: bolder;
-    color: bisque; }
 
 /* Tercera página - Actividades */
 .bloqueactividades {
@@ -266,41 +277,6 @@ ul {
   align-items: center;
   flex-wrap: wrap;
   gap: 0.5rem; }
-
-.cajaNosotros {
-  margin: 0% auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding-top: 1.5rem;
-  width: 95%;
-  height: 1500px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: "origen origen" "valores valores" "recomendaciones recomendaciones";
-  grid-row-gap: 3rem;
-  overflow: hidden; }
-
-.origen {
-  grid-area: origen;
-  background-color: rgba(21, 65, 49, 0.548);
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.valores {
-  grid-area: valores;
-  background-color: rgba(51, 88, 70, 0.747);
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.recomendaciones {
-  grid-area: recomendaciones;
-  background-color: rgba(21, 65, 49, 0.548);
-  display: flex;
-  justify-content: center;
-  align-items: center; }
 
 .tarjeta {
   width: 400px;
@@ -329,102 +305,6 @@ ul {
     text-align: center;
     color: #1a4425;
     font-weight: bold; }
-
-.altura {
-  height: 500px; }
-
-.imagenCarrusel {
-  width: 100%;
-  height: 100%; }
-
-/* Cuarta página - Cerro */
-.cerro__contenedorimg {
-  height: 600px;
-  border: solid rgba(21, 65, 49, 0.548) 5px;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem; }
-
-.cerro__img {
-  width: 100%;
-  height: 100%; }
-
-.cajaImgCerro2 {
-  padding: 1rem; }
-
-.imgSectionCerro {
-  width: 100%;
-  height: 100%; }
-
-.cerro__p {
-  padding-right: 1rem; }
-
-.parrafoInfo {
-  font-size: 20px;
-  line-height: 1.3;
-  text-align: center;
-  padding: 1rem;
-  color: bisque;
-  font-weight: bolder; }
-
-.cajaIframe {
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: column; }
-
-.cajaVisitaVirtual {
-  width: 1000px;
-  height: 600px;
-  margin-bottom: 2rem; }
-
-.visitaVirtual {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  width: 100%;
-  height: 600px; }
-
-/* Quinta página - Contacto */
-.cajaContacto {
-  width: 500px;
-  border: rgba(21, 65, 49, 0.548) solid 3px;
-  margin: auto;
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-  padding: 1rem;
-  background-color: rgba(21, 65, 49, 0.548);
-  padding-bottom: 1rem; }
-
-.sinNegrita {
-  font-weight: 500;
-  text-decoration: none;
-  font-size: 200%; }
-
-.formulario {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin: 0.5rem;
-  line-height: 1.5; }
-
-.mapa {
-  width: 100%;
-  height: 350px; }
-
-.parrafoLlegar {
-  color: bisque;
-  font-weight: bolder;
-  font-size: 1.1rem;
-  background-color: rgba(21, 65, 49, 0.548);
-  border: 3px rgba(51, 88, 70, 0.747) solid; }
-
-.nosotros__cajaImg {
-  text-align: center; }
-
-.nosotros__Img {
-  max-width: 1000px;
-  max-height: 700px; }
 
 .acordion__h2 {
   background-color: rgba(51, 88, 70, 0.747);
@@ -455,6 +335,86 @@ ul {
 
 .accordion-item {
   border: 0.3px solid rgba(51, 88, 70, 0.747); }
+
+.altura {
+  height: 500px; }
+
+.imagenCarrusel {
+  width: 100%;
+  height: 100%; }
+
+/* Cuarta página - Cerro*/
+.cerro__contenedorimg {
+  height: 600px;
+  border: solid rgba(21, 65, 49, 0.548) 5px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem; }
+
+.cerro__img {
+  width: 100%;
+  height: 100%; }
+
+.cajaImgCerro2 {
+  padding: 1rem; }
+
+.imgSectionCerro {
+  width: 100%;
+  height: 100%; }
+
+.cerro__p {
+  padding-right: 1rem; }
+
+.parrafoInfo {
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  padding: 1rem;
+  color: bisque;
+  font-weight: bolder; }
+
+.cajaVisitaVirtual {
+  width: 1000px;
+  height: 600px;
+  margin-bottom: 2rem; }
+
+.visitaVirtual {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  height: 600px; }
+
+/* Quinta página - Contacto*/
+.cajaContacto {
+  width: 500px;
+  border: rgba(21, 65, 49, 0.548) solid 3px;
+  margin: auto;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  background-color: rgba(21, 65, 49, 0.548);
+  padding-bottom: 1rem; }
+
+.formulario {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0.5rem;
+  line-height: 1.5; }
+
+.mapa {
+  width: 100%;
+  height: 350px; }
+
+.parrafoLlegar {
+  color: bisque;
+  font-weight: bolder;
+  font-size: 1.1rem;
+  background-color: rgba(21, 65, 49, 0.548);
+  border: 3px rgba(51, 88, 70, 0.747) solid; }
+
+.nosotros__cajaImg {
+  text-align: center; }
 
 .card {
   background-color: rgba(51, 88, 70, 0.747); }
@@ -513,7 +473,6 @@ ul {
   font-size: 2rem;
   text-align: center; }
 
-/* Media Querys*/
 /* Tablet*/
 @media screen and (max-width: 1201px) {
   .nosotros__img {
@@ -544,6 +503,8 @@ ul {
     margin-left: -4rem; }
   .caja__imgOrigen {
     margin-right: auto; }
+  .caja__imgRecomendaciones {
+    margin-top: auto; }
   .alturaPisada {
     width: auto; }
   .parrafoCajaNosotros {
@@ -629,7 +590,9 @@ ul {
     font-size: 18px;
     font-weight: 400; }
   .caja__imgRecomendaciones {
-    margin-top: 0rem; } }
+    margin-top: 0rem; }
+  .margintopgrande {
+    margin-top: -7rem; } }
 
 @media screen and (max-width: 992px) {
   .mt__tarjeta {
@@ -638,6 +601,10 @@ ul {
     height: 400px; }
   .col-6 {
     width: 100%; } }
+
+@media screen and (max-width: 880px) {
+  .margintopgrande {
+    margin-top: -6.5rem; } }
 
 @media screen and (max-width: 768px) {
   .caja__imgPlanes {
@@ -650,7 +617,12 @@ ul {
     margin-right: 0%;
     margin-left: 2rem; }
   .offset-1 {
-    margin-left: auto; } }
+    margin-left: auto; }
+  .margintopgrande {
+    margin-top: -5rem; }
+  #bannerinicio {
+    padding-left: 0%;
+    padding-right: 0%; } }
 
 /*Mobile*/
 @media screen and (max-width: 600px) {
@@ -706,17 +678,21 @@ ul {
   .footer__p {
     font-size: 15px; }
   .parrafoInfo {
-    font-size: 15px; } }
+    font-size: 15px; }
+  .margintopgrande {
+    margin-top: -4rem; } }
 
 @media screen and (max-width: 570px) {
   .mapa {
     height: 350px; }
   .caja__imgPlanes {
-    margin-left: 1.8rem;
+    margin-left: 1.2rem;
     margin-bottom: 2rem; }
   .caja__imgRecomendaciones {
     height: auto;
-    padding-bottom: 1rem; } }
+    padding-bottom: 1rem; }
+  .margintopgrande {
+    margin-top: -3.2rem; } }
 
 @media screen and (max-width: 402px) {
   #bannerinicio {
@@ -747,7 +723,9 @@ ul {
   .parrafoCajaNosotros {
     font-size: 90%; }
   .parrafoLlegar {
-    font-size: 0.9rem; } }
+    font-size: 0.9rem; }
+  .margintopgrande {
+    margin-top: 0rem; } }
 
 @media screen and (max-width: 323px) {
   .footer__p {
