--- a/scss/parciales/_bases.scss
+++ b/scss/parciales/_bases.scss
@@ -21,7 +21,8 @@
     max-width: 1250px;
     margin: 0% auto; }
 
-ul { list-style-type: none; }
+ul { list-style-type: none;
+    margin-bottom: 0rem;} 
 
 .h1 {
     color: $colorclaro;
@@ -41,8 +42,10 @@ ul { list-style-type: none; }
 
 .enlaceParrafo {color: $colorclaro;}
 
-.color {background-color: $coloroscuro51;
+.color {background-color: $coloroscuro21;
 justify-content: center;}
+
+.sombraP {text-shadow: 1px 1px 2px black;}
 
 .sinPadding {padding: 0%;}
 
@@ -58,6 +61,8 @@ justify-content: center;}
 }
 
 .margintop {margin-top: 2rem;}
+
+.margintopgrande {margin-top: -9rem;}
 
 .marginT {margin-top: 1rem;}
 
@@ -77,13 +82,19 @@ justify-content: center;}
 
 .subtituloCentrado{ 
     color: rgb(12,71,36);
-    font-weight: bolder;
+    text-shadow: 1px 1px 3px bisque;
+    font-weight: 900;
     text-align: center;
     text-decoration:underline;
-    font-size: 220%;
+    font-size: 270%;
     font-family: 'Oooh Baby';}
 
 strong {
     text-decoration: underline;
     font-style: oblique;
     font-weight: 900;}
+
+.maxwidth {max-width: 100%;}
+.sinNegrita {
+    text-decoration: none;
+    font-size: 200%;}
