--- a/scss/parciales/_componentes.scss
+++ b/scss/parciales/_componentes.scss
@@ -1,7 +1,11 @@
+/*INDEX*/
+
 #bannerinicio {
-    width: 95vw;
-    height: 45vw;
+    width: 100%;
+    height: 80%;
     padding-top: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     border-radius: 15%;
     margin-bottom: 1rem;
 }
@@ -18,13 +22,11 @@
 
 .caja3index {
     margin: 0 auto;
-    margin-bottom: 1rem;
-    border: solid 3px $coloroscuro21;
-    padding: 1rem;
+    margin-bottom: 1rem;    
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
-    grid-column-gap: 1rem;
+    grid-column-gap: 1.5rem;
 
     &__img{
         width: 100%;
@@ -34,86 +36,24 @@
     }
 }
 
+.img-thumbnail {
+    background-color: rgb(12,71,36);
+    border-radius: 0%;}
+
 .iframeIndexContenedor {
-    height: 30rem;
-    margin: 0% auto;
-}
+    height: 32rem;
+    margin: 0% auto;}
 
 .iframeIndex { 
     height: 100%;
-    width: 100%;
-}
+    width: 100%;}
 
 /* Segunda página - Nosotros*/
-
-.cajaNosotros {
-    width: 98%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;    
-    }
-
-.nosotros__img {
-    width: 100%;
-    object-fit: cover;
-}
-
-.caja__imgOrigen {
-    margin-top: 2rem;
-    margin-right: 1.5rem;
-    width: 400px;
-    height: 340px;
-    overflow: hidden;
-}
-
-.imgOrigen {
-    width: 100%;
-    height: 100%;
-}
-
-.caja__imgPlanes {
-    width: 410px;
-    height: 350px;
-    margin-top: 2rem;
-    margin-left: -4rem;
-    margin-bottom: 2rem;
-    overflow: hidden;
-}
-
-.imgPlanes{
-    width: 100%;
-    height: 100%;
-}
-
-.caja__imgRecomendaciones {
-    width: 490px;
-    height: 320px;
-    margin-top: 3rem;
-}
-
-.imgRecomendaciones {
-    width: 100%;
-}
-
-.parrafoCajaNosotros {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 100%;
-    line-height: 2;
-    text-align: center; 
-    color: $colorclaro;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: 0.4rem;
-    font-weight: bold;
-    margin-bottom: 0rem;
-}
-
-.tamañoLetra {margin-left: 2rem;}
 
 .tarjetaStaff {
     background-color: $coloroscuro21;
     padding: 1rem;
+    height: 100%;
 
     &__img {margin-bottom: 0.5rem;}
 
@@ -121,53 +61,62 @@
     
     &__p {
         font-weight: bolder;
-        color: $colorclaro;
-    }
+        color: $colorclaro;}
 }
+
+.parrafoCajaNosotros {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 110%;
+    line-height: 2;
+    text-align: center; 
+    color: $colorclaro;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 0.4rem;
+    font-weight: bold;
+    margin-bottom: 0rem;}
+
+.nosotros__img {
+    width: 100%;
+    object-fit: cover;}
+
+.caja__imgOrigen {
+    margin-top: 3.5rem;
+    margin-right: 1.5rem;
+    width: 400px;
+    height: 340px;
+    overflow: hidden;}
+
+.imgOrigen {
+    width: 100%;
+    height: 100%;}
+
+.caja__imgPlanes {
+    width: 410px;
+    height: 350px;
+    margin-top: 3.8rem;
+    margin-left: -4rem;
+    margin-bottom: 2rem;
+    overflow: hidden;}
+
+.imgPlanes{
+    width: 100%;
+    height: 100%;}
+
+.caja__imgRecomendaciones {
+    width: 490px;
+    height: 320px;
+    margin-top: 4.5rem;}
+
+.imgRecomendaciones {width: 100%;}
+.tamañoLetra {margin-left: 2rem;}
 
 /* Tercera página - Actividades */
 
 .bloqueactividades{
     @include cajaflex (center, center);
     flex-wrap: wrap;
-    gap: 0.5rem;
-}
-
-.cajaNosotros {
-    margin: 0% auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    padding-top: 1.5rem;
-    width: 95%;
-    height: 1500px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 
-    "origen origen"
-    "valores valores"
-    "recomendaciones recomendaciones";
-    grid-row-gap: 3rem;
-    overflow: hidden;
-}
-
-.origen {
-grid-area: origen; background-color: $coloroscuro21;
-@include cajaflex (center, center);
-}
-
-.valores {
-grid-area: valores; background-color:  $coloroscuro51;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.recomendaciones {
-grid-area: recomendaciones ; background-color: $coloroscuro21;
-@include cajaflex (center, center);
-
-}
+    gap: 0.5rem;}
 
 .tarjeta {
     width: 400px;
@@ -204,104 +153,6 @@ grid-area: recomendaciones ; background-color: $coloroscuro21;
     }
 }
 
-.altura {height: 500px;}
-
-.imagenCarrusel {
-    width: 100%;
-    height: 100%;
-}
-
-/* Cuarta página - Cerro */
-
-.cerro__contenedorimg {
-    height: 600px;
-    border: solid $coloroscuro21 5px ;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-}
-
-.cerro__img {
-    width: 100%;
-    height: 100%;
-}
-
-.cajaImgCerro2 {padding: 1rem;}  
-
-.imgSectionCerro{
-    width: 100%;
-    height: 100%;
-}
-
-.cerro__p {padding-right: 1rem;}
-
-.parrafoInfo {
-    font-size: 20px;
-    line-height: 1.3;
-    text-align: center;
-    padding: 1rem;
-    color:$colorclaro;
-    font-weight: bolder;
-}
-
-.cajaIframe {
-    padding: 1rem;
-    @include cajaflex (center, stretch);
-    flex-direction: column;
-}
-
-.cajaVisitaVirtual {
-    width: 1000px;
-    height: 600px;
-    margin-bottom: 2rem;
-}
-
-.visitaVirtual{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    width: 100%;
-    height: 600px;
-}
-
-/* Quinta página - Contacto */
-
-.cajaContacto {
-    width: 500px;
-    border: $coloroscuro21 solid 3px;
-    margin: auto;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    padding: 1rem;
-    background-color: $coloroscuro21;
-    padding-bottom: 1rem;}
-
-.sinNegrita {
-    font-weight:500 ;
-    text-decoration: none;
-    font-size: 200%;}
-
-.formulario {
-    @include cajaflex (center, flex-start);
-    margin: 0.5rem;
-    line-height: 1.5;}
-
-.mapa {
-    width: 100%;
-    height: 350px;}
-
-.parrafoLlegar {
-    color: $colorclaro;
-    font-weight: bolder;
-    font-size: 1.1rem;
-    background-color: $coloroscuro21;
-    border: 3px $coloroscuro51 solid;}
-
-.nosotros__cajaImg { text-align: center; } 
-
-.nosotros__Img { 
-    max-width: 1000px; 
-    max-height: 700px;} 
-
 .acordion__h2{ 
     background-color:rgba(51, 88, 70, 0.747) ; 
     font-size: 1.3rem; 
@@ -324,17 +175,89 @@ grid-area: recomendaciones ; background-color: $coloroscuro21;
         border: 2px rgb(12,71,36) solid;}
 
 .acordion__caja { background-color: rgba(21, 65, 49, 0.87); } 
-
 .acordion__encabezado {background-color: rgba(51, 88, 70, 0.747);} 
-
 .accordion-item {border: 0.3px solid rgba(51, 88, 70, 0.747);} 
+.altura {height: 500px;}
+
+.imagenCarrusel {
+    width: 100%;
+    height: 100%;}
+
+/* Cuarta página - Cerro*/
+
+.cerro__contenedorimg {
+    height: 600px;
+    border: solid $coloroscuro21 5px ;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;}
+
+.cerro__img {
+    width: 100%;
+    height: 100%;}
+
+.cajaImgCerro2 {padding:1rem;}  
+
+.imgSectionCerro{
+    width: 100%;
+    height: 100%;}
+
+.cerro__p {padding-right: 1rem;}
+
+.parrafoInfo {
+    font-size: 20px;
+    line-height: 1.3;
+    text-align: center;
+    padding: 1rem;
+    color:$colorclaro;
+    font-weight: bolder;}
+
+.cajaVisitaVirtual {
+    width: 1000px;
+    height: 600px;
+    margin-bottom: 2rem;}
+
+.visitaVirtual{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 100%;
+    height: 600px;}
+
+/* Quinta página - Contacto*/
+    
+.cajaContacto {
+    width: 500px;
+    border: $coloroscuro21 solid 3px;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    background-color: $coloroscuro21;
+    padding-bottom: 1rem;}
+
+.formulario {
+    @include cajaflex (center, flex-start);
+    margin: 0.5rem;
+    line-height: 1.5;}
+
+.mapa {
+    width: 100%;
+    height: 350px;}
+
+.parrafoLlegar {
+    color: $colorclaro;
+    font-weight: bolder;
+    font-size: 1.1rem;
+    background-color: $coloroscuro21;
+    border: 3px $coloroscuro51 solid;}
+
+.nosotros__cajaImg { text-align: center; } 
 
 .card { background-color:rgba(51, 88, 70, 0.747);
               
     &__cajaP { 
         background-color: rgba(51, 88, 70, 0.747); 
-        text-align: center; 
-    } 
+        text-align: center; } 
 
     &__p { 
         font-family: 'Quicksand', sans-serif; 
@@ -363,6 +286,5 @@ grid-area: recomendaciones ; background-color: $coloroscuro21;
         width: 400px; 
         height: 300px; 
         padding: 0.2rem; 
-        background-color: bisque; 
-    } 
+        background-color: bisque; } 
 } 
