--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -1,5 +1,3 @@
-/* Media Querys*/
-
 /* Tablet*/
 
 @media screen and (max-width: 1201px) {
@@ -31,6 +29,7 @@
         margin-left: -4rem;}
 
     .caja__imgOrigen {margin-right: auto;}
+    .caja__imgRecomendaciones{margin-top: auto;}
     .alturaPisada {width: auto;}
     .parrafoCajaNosotros {margin-top: 1rem;}
 }
@@ -59,8 +58,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
         grid-row-gap: 1rem;
-        height: 100%;
-    }
+        height: 100%;}
 
     .iframeIndexContenedor{
         height: 25rem;
@@ -119,6 +117,7 @@
         margin-left: 0%;}
     .parrafoInfo {font-size: 18px; font-weight: 400;}
     .caja__imgRecomendaciones {margin-top: 0rem;}
+    .margintopgrande { margin-top: -7rem;}
 }
 
 @media screen and (max-width: 992px){
@@ -126,6 +125,11 @@
     .mt__tarjeta {margin-top: 1rem;}
     .visitaVirtual { height: 400px;}
     .col-6 { width: 100%;}
+}
+
+@media screen and (max-width: 880px){
+
+    .margintopgrande {margin-top: -6.5rem;}
 }
 
 @media screen and (max-width: 768px) {
@@ -141,6 +145,9 @@
         margin-left: 2rem;}
 
     .offset-1 {margin-left: auto;}
+    .margintopgrande {margin-top: -5rem;}
+    #bannerinicio{ padding-left: 0%;
+    padding-right: 0%;}
 }
 
 /*Mobile*/
@@ -187,22 +194,22 @@
     .parrafoInfo {text-align: center;}
     .footer__p {font-size: 15px;}
     .parrafoInfo {font-size: 15px;}
+    .margintopgrande {margin-top: -4rem;}
 }
     
-@media screen and (max-width: 770px) {
-  
-}
-
 @media screen and (max-width: 570px){
- .mapa {height:350px ;}
-
- .caja__imgPlanes {
-    margin-left: 1.8rem;
+    
+    .mapa {height:350px ;}
+    
+    .caja__imgPlanes {
+    margin-left: 1.2rem;
     margin-bottom: 2rem;}
 
-.caja__imgRecomendaciones {
+    .caja__imgRecomendaciones {
     height: auto;
     padding-bottom: 1rem;}
+
+    .margintopgrande {margin-top: -3.2rem;}
 }
 
 @media screen and (max-width: 402px){
@@ -224,7 +231,8 @@
     }
     .caja__imgPlanes {margin-left: 1.5rem;}
     .parrafoCajaNosotros {font-size:90%;}
-    .parrafoLlegar{font-size: 0.9rem;}    
+    .parrafoLlegar{font-size: 0.9rem;}
+    .margintopgrande {margin-top: 0rem;}
 }
 
 @media screen and (max-width: 323px){
@@ -233,5 +241,4 @@
     .tamañoReducidoI {font-size: 20px;}
     .iframeIndex {width: auto;}
     .margenAbajo { margin-bottom: 1rem;}
-
 }
