modificacion del nav

--- a/scss/parciales/_componentes.scss
+++ b/scss/parciales/_componentes.scss
@@ -162,7 +162,8 @@
 .acordion__p { 
     font-size: 1.1rem; 
     font-weight: 400; 
-    color: bisque; } 
+    color: bisque;
+background-color:black; } 
 
 .acordion__strong {
     font-size: 1.3;
