--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -315,7 +315,8 @@ strong {
 .acordion__p {
   font-size: 1.1rem;
   font-weight: 400;
-  color: bisque; }
+  color: bisque;
+  background-color: black; }
 
 .acordion__strong {
   font-size: 1.3;
@@ -627,10 +628,9 @@ strong {
 /*Mobile*/
 @media screen and (max-width: 600px) {
   .nav__lista {
-    background-color: rgba(21, 65, 49, 0.548);
-    width: 80%;
+    background-color: #335846e6;
+    width: 100%;
     height: 70%;
-    max-width: 400px;
     transform: translateX(-100%);
     position: fixed;
     top: 25%;
@@ -639,11 +639,15 @@ strong {
     z-index: 100;
     flex-direction: column;
     justify-content: center;
-    text-align: center; }
+    text-align: center;
+    font-weight: 600; }
   #menuLista:target {
     transform: translateX(0); }
   .oculto {
     display: inline-block; }
+  ul {
+    margin: 0%;
+    padding: 0%; }
   .icono {
     color: bisque;
     font-size: 15px; }
