--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -155,10 +155,9 @@
 @media screen and (max-width: 600px){
  
     .nav__lista {
-        background-color: $coloroscuro21;
-        width: 80%;
+        background-color: #335846e6;
+        width: 100%;
         height: 70%;
-        max-width: 400px;
         transform: translateX(-100%);
         position: fixed;
         top: 25%;
@@ -167,10 +166,13 @@
         z-index: 100;
         flex-direction: column;
         justify-content: center;
-        text-align: center;}
+        text-align: center;
+        font-weight: 600;}
+        
     
     #menuLista:target {transform: translateX(0);}
     .oculto { display: inline-block;}
+    ul{margin: 0%; padding: 0%;}
 
     .icono{
         color: $colorclaro;
