--- a/scss/parciales/_header.scss
+++ b/scss/parciales/_header.scss
@@ -11,8 +11,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: relative;
-        }
+            position: relative;}
 
         &__titulo {height: 100px;}
 }
@@ -41,8 +40,7 @@
         transform-origin: right;
         transition: transform 0.7s;}
 
-    &:hover {
-        color:$colorclaro;}
+    &:hover {color:$colorclaro;}
 
     &:hover::after {
         transform:scaleX(1);
