--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -125,6 +125,8 @@
     .mt__tarjeta {margin-top: 1rem;}
     .visitaVirtual { height: 400px;}
     .col-6 { width: 100%;}
+    .acordion__p {flex-direction: column;}
+    .justificado { text-align: justify;}
 }
 
 @media screen and (max-width: 880px){
@@ -146,9 +148,16 @@
 
     .offset-1 {margin-left: auto;}
     .margintopgrande {margin-top: -5rem;}
-    #bannerinicio{ padding-left: 0%;
-    padding-right: 0%;}
-}
+    #bannerinicio{ 
+        padding-left: 0%;
+        padding-right: 0%;}
+    .minTamaño{
+        min-width: 0%;
+        min-height: 0%;}
+    .acordion { 
+        padding: map-get($map: $espaciados, $key:0 );
+        padding-bottom: map-get($map: $espaciados, $key:4 );} 
+    }
 
 /*Mobile*/
 
@@ -157,10 +166,10 @@
     .nav__lista {
         background-color: #335846e6;
         width: 100%;
-        height: 70%;
+        height: 80%;
         transform: translateX(-100%);
         position: fixed;
-        top: 25%;
+        top: 0%;
         left: 0%;
         transition: transform 0.5s;
         z-index: 100;
@@ -169,7 +178,6 @@
         text-align: center;
         font-weight: 600;}
         
-    
     #menuLista:target {transform: translateX(0);}
     .oculto { display: inline-block;}
     ul{margin: 0%; padding: 0%;}
@@ -197,6 +205,7 @@
     .footer__p {font-size: 15px;}
     .parrafoInfo {font-size: 15px;}
     .margintopgrande {margin-top: -4rem;}
+    .menosTexto{ display: none;}
 }
     
 @media screen and (max-width: 570px){
@@ -235,6 +244,10 @@
     .parrafoCajaNosotros {font-size:90%;}
     .parrafoLlegar{font-size: 0.9rem;}
     .margintopgrande {margin-top: 0rem;}
+    .acordion__p { font-size: 0.9rem;
+    font-weight: 600;}
+    strong {font-weight: 1200; }
+    .acordion__span { display: none;}
 }
 
 @media screen and (max-width: 323px){
