Cambio de grosor parrafo cerro y completud de los alt

--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -681,7 +681,8 @@ strong {
   .footer__p {
     font-size: 15px; }
   .parrafoInfo {
-    font-size: 15px; }
+    font-size: 16px;
+    font-weight: 600; }
   .margintopgrande {
     margin-top: -4rem; }
   .menosTexto {
