--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -203,7 +203,9 @@
     .cajaContacto {width: 350px; margin-top: 1rem;}
     .parrafoInfo {text-align: center;}
     .footer__p {font-size: 15px;}
-    .parrafoInfo {font-size: 15px;}
+    .parrafoInfo {
+        font-size: 16px;
+        font-weight: 600;}
     .margintopgrande {margin-top: -4rem;}
     .menosTexto{ display: none;}
 }
